
	* include/port.h: Include config.h and provide the new names for
	the obsolete elf_getshstrndx() and elf_getshdrnum() if necessary.
	* libdtrace/dt_module.c (dt_module_update): Use elf_getshdrstrndx():
	elf_getshstrndx() is obsolete.
	* libproc/Psymtab.c (build_fake_elf): Likewise.  Also use
	elf_getshdrnum() rather than elf_getshnum().
	* (Pbuild_file_symtab): Likewise.

2012-06-14  Nick Alcock  <nick.alcock@oracle.com>

	Eliminate symbol-lookup duplication via macro-expansion.

	* libdtrace/dt_module.c (dt_module_syminit32, dt_module_syminit64)
	(dt_module_symcomp32, dt_module_symcomp64)
	(dt_module_symsort32, dt_module_symsort64)
	(dt_module_symname32, dt_module_symname64)
	(dt_module_symaddr32, dt_module_symaddr64):
	Merge and move into...

	* libdtrace/dt_symbol_modops.h (dt_module_syminit)
	(dt_module_symcomp, dt_module_symsort, dt_module_symname)
	(dt_module_symaddr): ... this new file.

	* libdtrace/dt_module.c: Include it repeatedly.

	Eliminate the concept of 'primary objects' and most mentions of
	the kernel runtime loader interface.

	* libdtrace/dt_ident.h (DT_IDFLG_PRIM): Deleted.
	* libdtrace/dt_parser.c (dt_node_inline): ... and from here...
	(dt_xcook_ident): ... and from here...
	* libdtrace/dt_as.c (dt_as_undef): ... and from here.
	(dt_as): DT_LINK_PRIMARY is gone.

	* libdtrace/dt_impl.h (DT_DM_PRIMARY): Deleted.
	(DT_LINK_PRIMARY): Likewise.
	(dtrace_hdl): Deleted dt_rtld.
	* libdtrace/dt_module.c (dt_module_info): Drop DT_DM_PRIMARY
	handling.
	(dt_module_update): Likewise.  Drop .info section parsing.
	(dtrace_update): Drop projid, taskid, and dt_rtld references.
	(dt_module_from_object): Drop DTRACE_OBJ_RTLD handling.
	* libdtrace/dt_options.c (dt_opt_linkmode): Drop the primary
	linkmode.
	* libdtrace/dtrace.h (DTRACE_OBJ_RTLD): Deleted.
	(DTRACE_OBJ_F_PRIMARY): Deleted.

	More project/task/zone/contract removal.

	* libdtrace/dt_open.c (_dtrace_macros): Drop projid and taskid.